--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -122,6 +122,7 @@
   .codes .card_wrap .card .inner>.code_high>address>.bestdeals{color:#000;}
   .codes .card_wrap .card .inner>.code_high>address>.amz_prime{color:#e47911;}
   .codes .card_wrap .card .inner>.code_high>address>.ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
+  em.pcou{color:#87c442;font-weight:700;}
 
   .codes .card_wrap .card .inner>.code_high>.admin{}
   .codes .card_wrap .card .inner>.code_high>.admin>ul{}
@@ -257,6 +258,7 @@
   .codes .card_wrap .card .inner>.code_high>address>.dis_price{color:#08f;font-size:25px;margin-right:5px;font-weight:500;}
   .codes .card_wrap .card .inner>.code_high>address>.bestdeals{color:#000;}
   .codes .card_wrap .card .inner>.code_high>address>.ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
+  em.pcou{color:#87c442;font-weight:700;}
   .codes .card_wrap .card .inner>.code_high>.admin{}
   .codes .card_wrap .card .inner>.code_high>.admin>ul{}
   .codes .card_wrap .card .inner>.code_high>.admin>ul>li{float:left;margin-right:15px;}
