--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -186,8 +186,9 @@
 .deals_card .image_box .term{width:70px;height:42px;/*background:#ff0000;*/}
 .deals_card .image_box .term p{margin-top:7px;font-size:11px;}
 .deals_card .image_box .exprie{background:#ff4d4d;}
-.deals_card .image_box .endtoday{background:#ffa500;width:50px;position:absolute;top:50px;left:4px;}
+.deals_card .image_box .endtoday{background:#ffa500;width:50px;position:absolute;top:5px;left:60px;}
 .deals_card .image_box .wcoupon{background:#87c442;}
+.deals_card .image_box .wcp{top:50px;}
 .deals_card .image_box .endtoday p{margin:0;height:auto;}
 .deals_card .image_box .expried{-webkit-filter: grayscale(100%);filter: gray;height:100%;}
 .deals_card img{width:70%;height:70%;object-fit:contain;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);object-fit:contain;}
