--- a/app/views/storepromotions/_table.html.erb
+++ b/app/views/storepromotions/_table.html.erb
@@ -88,7 +88,7 @@
   <tr><td>backcountry</td><td>https://bit.ly/2MiNfSq</td><td>https://i.pinimg.com/564x/c2/ea/bb/c2eabb576284e316285afa13a46b9a81.jpg</td></tr>
   <tr><td>LOFT</td><td>https://bit.ly/2wjcjxZ</td><td>https://i.pinimg.com/564x/7e/98/3d/7e983d7206e8443f02abef251b2ae13a.jpg</td></tr>
   <tr><td>Load & Taylor</td><td>https://bit.ly/2XLhNBE</td><td>https://i.pinimg.com/564x/43/7c/cc/437ccc32b7be6d338c727c07ec2b1d79.jpg</td></tr>
-  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+  <tr><td>Levi's</td><td>https://bit.ly/2JCZffC</td><td>https://i.pinimg.com/564x/fb/c0/05/fbc00520f9dec11859d77021b1615dc6.jpg</td></tr>
   <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
   <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
   <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
