--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -661,19 +661,29 @@ header .gnb_m,header .gnb_open2{display:none;}
 .set_search_box button.accordion{margin-bottom:10px;width:30%;margin-bottom:10px;background:#fff;color:#616161;font-size:15px;border-radius:10px;border:1px solid #ccc;font-weight:300;}
 .set_search_box button.accordion span{font-size:15px;font-weight:bold;}
 .set_search_box .panel{padding:0 18px;display:none;background-color:#fff;overflow:hidden;}
-.set_search_box .feild_wrap, .set_search_box .option_wrap{margin-bottom:30px;}
-.set_search_box .feild_wrap .pricing_box span.label{float:left;width:25%;}
-.set_search_box .feild_wrap .pricing_box .price{float:left;width:30%;}
-.set_search_box .feild_wrap .pricing_box .price input{float:left;width:90%;}
-.option_wrap{}
+.set_search_box .feild_wrap, .set_search_box .option_wrap{width:102.5%;margin-bottom:30px;}
+.set_search_box .feild_wrap{width:104%;}
+
+.set_search_box .feild_wrap .pricing_box{margin:15px 0;}
+.set_search_box .feild_wrap .pricing_box .price{float:left;width:45%;}
+.set_search_box .feild_wrap .keyword_box input{float:left;background:#fff;width:45%;height:40px;border:1px solid #e3e3e3;border-radius:5px;padding:0 10px;}
+.set_search_box .feild_wrap .pricing_box input,
+.set_search_box .feild_wrap .pct_box select{float:left;background:#fff;width:100%;height:40px;border:1px solid #e3e3e3;border-radius:5px;padding:0 10px;}
+.set_search_box .feild_wrap .pricing_box .min,
+.set_search_box .feild_wrap .pct_box .minpct{margin-right:2.5%;}
+.set_search_box .feild_wrap .pricing_box .max,
+.set_search_box .feild_wrap .pct_box .maxpct{margin-left:2.5%;}
+.set_search_box .feild_wrap .pct_box .pct{float:left;width:45%;}
+
 
 a.set_reset, a.set_reset_m{border:1px solid #ccc;padding:10px 50px;color:#616161;border-radius:10px;float:left;}
 a.set_reset_m{display:none;}
 
 @media screen and (max-width:640px){
+  .set_search_box .feild_wrap .keyword_box input{width:95%;}
   .op_wrap{float:none;width:100%;margin:0;}
   .set_search_box{width:100%;margin:10px 0 0 0;padding:10px;}
-  .set_search_box button{width:100%;} 
+  .set_search_box button{width:100%;padding:10px;font-size:12px;} 
   .field span.label{width:100%;float:none;padding:0;}
   .field input, .field select{width:100%;float:none;}
   .field .custom-time{padding:10px 0 0 0;}
