--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -603,7 +603,7 @@ header .gnb_m,header .gnb_open2{display:none;}
 }
 
 /* Amazon Widget */  
- /* Amazon Search3 */
+ /* Amazon Search */
 .amz_search{margin:7px 0;}
 .amz_search div#amzn-native-ad-0 .amzn-native-header{display:none;}
 .amz_search div#amzn-native-ad-0 div.amzn-native-category-trigger-area{background:#000;color:#fff;}
@@ -615,8 +615,9 @@ header .gnb_m,header .gnb_open2{display:none;}
 
 
 
+/* Advance amazon search */
 .set_search{font-family:'Montserrat', sans-serif;}
-.set_banner{float:left;width:33%;margin-right:2%;border:1px solid #aaa;border-radius:10px;box-shadow:0 2px 10px rgba(0, 0, 0, 0.1);padding:15px;height:523.88px;overflow:scroll;}
+.set_banner{float:left;width:33%;margin-right:2%;border:1px solid #aaa;border-radius:10px;box-shadow:0 2px 10px rgba(0, 0, 0, 0.1);padding:15px;height:683.44px;overflow:scroll;}
 .set_banner h2{font-size:20px;}
 .set_banner ul{margin-left:15px;}
 .set_banner ul li{margin:10px 0;list-style:disc;}
@@ -663,6 +664,7 @@ header .gnb_m,header .gnb_open2{display:none;}
 .set_search_box .panel{padding:0 18px;display:none;background-color:#fff;overflow:hidden;}
 .set_search_box .feild_wrap, .set_search_box .option_wrap{width:102.5%;margin-bottom:30px;}
 .set_search_box .feild_wrap{width:104%;}
+.set_search_box .feild_wrap .pct_none{display:none;}
 
 .set_search_box .feild_wrap .pricing_box{margin:15px 0;}
 .set_search_box .feild_wrap .pricing_box .price{float:left;width:45%;}
