--- a/app/views/deals/_set_search.html.erb
+++ b/app/views/deals/_set_search.html.erb
@@ -5,80 +5,69 @@
 <div class="set_search_box">
   <h2>Amazon Deal Finder</h2>
 
-  <button class="accordion">See All Categories</button>
+  <button class="accordion">Select Category</button>
   <%= render 'deals/set_category' %>
 
 
   <div class="feild_wrap">
     <div class="keyword_box clearfix">
       <p>Keyword</p>
-      <!-- <span class="label">Search Keyword</span> -->
       <input type="text" class="keyword" placeholder="Search Keyword" value="">
     </div>
 
-    <% if can? :update, @promocode %>
-      <div class="pricing_box clearfix">
-        <!-- <span class="label">Search Keyword</span> -->
-        <div class="price min">
-          <p>Min Price</p>
-          <!-- <span class="label">Min Price</span> -->
-          <input type="text" class="minprice" placeholder="Min Price" value="">
-        </div>
-
-        <div class="price max">
-          <p>Max Price</p>
-          <!-- <span class="label">Max Price</span> -->
-          <input type="text" class="maxprice" placeholder="Max Price" value="">
-        </div>
+    <div class="pricing_box clearfix">
+      <div class="price min">
+        <p>Min Price</p>
+        <input type="text" class="minprice" placeholder="Min Price" value="">
       </div>
 
+      <div class="price max">
+        <p>Max Price</p>
+        <input type="text" class="maxprice" placeholder="Max Price" value="">
+      </div>
+    </div>
 
-      <div class="pct_box clearfix">
-        <div class="minpct pct">
-          <p>Min Pct Off</p>
-          <select name="minpct">
-            <!-- <option value="">Min Pct Off</option> -->
-            <option value="0">0%</option>
-            <option value="5">5%</option>
-            <option value="10">10%</option>
-            <option value="20">20%</option>
-            <option value="30">30%</option>
-            <option value="40">40%</option>
-            <option value="50">50%</option>
-            <option value="60">60%</option>
-            <option value="70">70%</option>
-            <option value="80">80%</option>
-            <option value="90">90%</option>
-          </select>
-        </div>
 
-        <div class="maxpct pct">
-          <p>Max Pct Off</p>
-          <select name="maxpct">
-            <!-- <option value="">Max Pct Off</option> -->
-            <option value="0">0%</option>
-            <option value="5">5%</option>
-            <option value="10">10%</option>
-            <option value="20">20%</option>
-            <option value="30">30%</option>
-            <option value="40">40%</option>
-            <option value="50">50%</option>
-            <option value="60">60%</option>
-            <option value="70">70%</option>
-            <option value="80">80%</option>
-            <option value="90">90%</option>
-          </select>
-        </div>
+    <div class="pct_box clearfix">
+      <div class="minpct pct">
+        <p>Min Pct Off</p>
+        <select name="minpct">
+          <!-- <option value="">Min Pct Off</option> -->
+          <option value="0">0%</option>
+          <option value="5">5%</option>
+          <option value="10">10%</option>
+          <option value="20">20%</option>
+          <option value="30">30%</option>
+          <option value="40">40%</option>
+          <option value="50">50%</option>
+          <option value="60">60%</option>
+          <option value="70">70%</option>
+          <option value="80">80%</option>
+          <option value="90">90%</option>
+        </select>
       </div>
 
-
-    <% end %>
-
-
+      <div class="maxpct pct">
+        <p>Max Pct Off</p>
+        <select name="maxpct">
+          <!-- <option value="">Max Pct Off</option> -->
+          <option value="0">0%</option>
+          <option value="5">5%</option>
+          <option value="10">10%</option>
+          <option value="20">20%</option>
+          <option value="30">30%</option>
+          <option value="40">40%</option>
+          <option value="50">50%</option>
+          <option value="60">60%</option>
+          <option value="70">70%</option>
+          <option value="80">80%</option>
+          <option value="90">90%</option>
+        </select>
+      </div>
+    </div>
 
   
-    
-    <!-- <div class="field time">
+    <div class="field time pct_none">
       <span class="label">Search Option</span>
       <select name="time">
         <option value="">Select</option>
@@ -119,9 +108,9 @@
         </div>
         
       </div>
-    </div> -->
+    </div>
 
-    
+
   </div><!--feild_wrap-->
   
 
@@ -160,44 +149,42 @@
       </div>
     </div>
 
-    <% if can? :update, @promocode %>
+    <div class="option_box op_wrap">  
+      <p>w/ Get it by tomorrow</p>
+      <div class="fast-type on_off clearfix">
+        <input id="fast_off" name="fast-type" type="radio" value="" checked>
+        <label class="first swich_off" for="fast_off">OFF</label>
 
-      <div class="option_box op_wrap">  
-        <p>w/ Get it by tomorrow</p>
-        <div class="fast-type on_off clearfix">
-          <input id="fast_off" name="fast-type" type="radio" value="" checked>
-          <label class="first swich_off" for="fast_off">OFF</label>
-
-          <input id="fast" name="fast-type" type="radio" value="p_90%3A8308921011&dc&crid=12AG8FB7CS5F2&qid=1583144920&rnid=8308919011">
-          <label for="fast" class="swich_on">ON</label>
-        </div>
+        <input id="fast" name="fast-type" type="radio" value="p_90%3A8308921011&dc&crid=12AG8FB7CS5F2&qid=1583144920&rnid=8308919011">
+        <label for="fast" class="swich_on">ON</label>
       </div>
+    </div>
 
-      <div class="option_box op_wrap">  
-        <p>w/ International Shipping</p>
-        <div class="oversea-type on_off clearfix">
-          <input id="oversea_off" name="oversea-type" type="radio" value="" checked>
-          <label class="first swich_off" for="oversea_off">OFF</label>
+    <div class="option_box op_wrap">  
+      <p>w/ International Shipping</p>
+      <div class="oversea-type on_off clearfix">
+        <input id="oversea_off" name="oversea-type" type="radio" value="" checked>
+        <label class="first swich_off" for="oversea_off">OFF</label>
 
-          <input id="oversea" name="oversea-type" type="radio" value="p_n_shipping_option-bin%3A3242350011&dc&qid=1582884089&rnid=2944662011">
-          <label for="oversea" class="swich_on">ON</label>
-        </div>
+        <input id="oversea" name="oversea-type" type="radio" value="p_n_shipping_option-bin%3A3242350011&dc&qid=1582884089&rnid=2944662011">
+        <label for="oversea" class="swich_on">ON</label>
       </div>
+    </div>
 
-      <div class="option_box op_wrap">  
-        <p>w/ Subscribe & Save</p>
-        <div class="subscribe-type on_off clearfix">
-          <input id="subscribe_off" name="subscribe-type" type="radio" value="" checked>
-          <label class="first swich_off" for="subscribe_off">OFF</label>
+    <div class="option_box op_wrap">  
+      <p>w/ Subscribe & Save</p>
+      <div class="subscribe-type on_off clearfix">
+        <input id="subscribe_off" name="subscribe-type" type="radio" value="" checked>
+        <label class="first swich_off" for="subscribe_off">OFF</label>
 
-          <input id="subscribe" name="subscribe-type" type="radio" value="p_n_is_sns_available%3A2617006011&dc&qid=1582885888&rnid=2617005011">
-          <label for="subscribe" class="swich_on">ON</label>
-        </div>
+        <input id="subscribe" name="subscribe-type" type="radio" value="p_n_is_sns_available%3A2617006011&dc&qid=1582885888&rnid=2617005011">
+        <label for="subscribe" class="swich_on">ON</label>
       </div>
+    </div>
 
       
 
-    <% end %>
+    
 
 
     <a class="set_reset_m" href="/deals/quick_search">Reset</a>
