--- a/app/views/deals/new_test.html.erb
+++ b/app/views/deals/new_test.html.erb
@@ -1,6 +1,9 @@
 <div class="layout">
   <div class="wrap">
     <%= render 'shared/new_header' %> 
+    <div class="sub_header clearfix">
+      <%= render 'shared/new_header_amz' %> 
+    </div>
     <div class="index_box">
       <div class="set_search clearfix">
         <%= render 'deals/set_search' %>
