--- a/app/views/gadgets/index.html.erb
+++ b/app/views/gadgets/index.html.erb
@@ -50,7 +50,7 @@
                   <span>- <%= params[:category] %> -</span>
                   <p><%= link_to "All categories", categories_path %></p>
                 <% else %>
-                  <span>- Everything -</span>
+                  <span>- Awesome Gadgets -</span>
                   <p><%= link_to "All categories", categories_path %></p>
                 <% end %>
                 
