--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -75,7 +75,7 @@ body{/*font-family: 'Noto Sans KR','맑은고딕',sans-serif;*/font-family: 'Not
 .navbar-nav li a:hover{color:#08f;}
 .navbar-nav >li>a{margin:0;padding:0 12px;line-height:80px;color:#000;font-weight:700;text-transform:uppercase;letter-spacing:0.08em;}
 .navbar-nav >li>a:hover{color:#08f;}
-.navbar-nav >li.menu-item-has-children:hover>ul{opacity:1;top:auto;left:auto;animation:fade_in_up 300ms forwards;}
+.navbar-nav >li.menu-item-has-children:hover>ul{opacity:1;top:auto;left:auto;animation:fade_in_up 300ms forwards;border:1px solid #ccc;}
 .navbar-nav .sub-menu{position:absolute;width:110px;min-width:max-content;padding:12px 20px 20px;background-color:#fff;opacity:0;left:-9999px;z-index:6000;}
 .navbar-nav .sub-menu a{margin:0 -20px;padding:8px 20px 8px;}
 .navbar-nav .sub-menu a:hover{color:#fff;background-color:#08f;}
@@ -119,9 +119,19 @@ body{/*font-family: 'Noto Sans KR','맑은고딕',sans-serif;*/font-family: 'Not
   .container{padding-right:40px;}
 }
 
+.sub_header{margin-top:100px;}
+.sub_header ul{}
+.sub_header ul li{float:left;margin-right:20px;}
+.sub_header ul li a{color:#000;font-size:15px;}
+.index_box{margin-top:30px;}
 
-.index_box{margin-top:100px;}
 
+@media screen and (max-width:640px){
+  .sub_header{display:none;}
+  .index_box{margin-top:100px;}
+}
+@media screen and (min-width:641px) and (max-width:1199px){
+}
 
 
 /*@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);*/
@@ -225,7 +235,7 @@ header .gnb_m,header .gnb_open2{display:none;}
   .fix_header .fix_visual{float:left;height:100%;}
   .fix_header .fix_visual img{width:260px;height:30px;margin-top:15px;}
   .fix_header ul{float:left;margin:0;padding:5px 0;font-family: 'Righteous', cursive;}
-  .fix_header ul>li{float:left;width:150px;font-weight:400;text-align:center;}
+  .fix_header ul>li{float:left;width:137px;font-weight:400;text-align:center;}
   .fix_header ul>li:nth-child(3){width:150px;}
   .fix_header ul>li>a{text-decoration:none;color:#000;font-size:20px;line-height:50px;}
   .fix_header ul>li>a.active{background:rgba(26,26,255,0.2);padding:0 10px;}
@@ -319,7 +329,7 @@ header .gnb_m,header .gnb_open2{display:none;}
   .deals_main_menu ul li a:after{display:none;}
   /*.deals_main_menu ul li.nth_1:after{position:absolute;height:7px;content:'';background:#000;width:70%;top:68%;-webkit-transform:translateY(-5px);transform:translateY(-5px);}*/
   /*.deals_main_menu ul li.nth_1 span{display:none;}*/
-  .deals_main_menu ul li a{float:none;font-size:18px;}
+  .deals_main_menu ul li a{float:none;font-size:17px;}
 }
 
 @media screen and (min-width:641px) and (max-width:1199px){
@@ -345,11 +355,11 @@ header .gnb_m,header .gnb_open2{display:none;}
   .sub_nav .gnb_open_b.on{display:block;right:5px;top:5px;}
   .sub_nav .gnb_open_b img{width:40px;height:40px;}
   .sub_nav .gnb_kbg{display:none;position:fixed;left:0;top:0;width:100%;height:100%;background:rgba(0,0,0,0.5);z-index:301;}
-  .deals_main_menu ul li a{font-size:37.6px;}
+  .deals_main_menu ul li a{font-size:35.9px;}
 }
 
 /* Common Layout */
-.common_layout{margin:45px 0 0 0;}
+.common_layout{margin:30px 0 0 0;}
 .common_layout .lt_cnt{float:left;width:290px;margin-right:2%;font-family: 'Montserrat', sans-serif;}
 .common_layout .lt_cnt h2{color:#000;border-bottom:2px solid #616161;padding-bottom:3px;margin-bottom:10px;font-family: 'Montserrat', sans-serif;}
 .common_layout .lt_cnt img{width:100%;}
@@ -617,7 +627,7 @@ header .gnb_m,header .gnb_open2{display:none;}
 
 /* Advance amazon search */
 .set_search{font-family:'Montserrat', sans-serif;}
-.set_banner{float:left;width:33%;margin-right:2%;border:1px solid #aaa;border-radius:10px;box-shadow:0 2px 10px rgba(0, 0, 0, 0.1);padding:15px;height:683.44px;overflow:scroll;}
+.set_banner{float:left;width:33%;margin-right:2%;border:1px solid #aaa;border-radius:10px;box-shadow:0 2px 10px rgba(0, 0, 0, 0.1);padding:17px 20px;height:683.44px;overflow:scroll;}
 .set_banner h2{font-size:20px;}
 .set_banner ul{margin-left:15px;}
 .set_banner ul li{margin:10px 0;list-style:disc;}
@@ -701,7 +711,7 @@ a.set_reset_m{display:none;}
   
 }
 @media screen and (min-width:641px) and (max-width:1199px){
-  .set_banner{height:409.25px;}
+  .set_banner{height:566.94px;}
   .set_banner h2{font-size:17px;}
   .field span.label{width:33%;}
   .field input, .field select{width:64%;}
