--- a/app/views/shared/_header_bystore.html.erb
+++ b/app/views/shared/_header_bystore.html.erb
@@ -1,5 +1,5 @@
 <div class="deals_main_menu clearfix">
   <ul>
-    <li class="nth_1"><a href="/deals/quick_search">Amazon's Bargain</a><em>,</em><a class="active" href="/storepromotions"><span>Deals By Store</span></a></li>
+    <li class="nth_1"><a href="/deals/quick_search">All About Amazon</a><em>,</em><a class="active" href="/storepromotions"><span> Featured Discounts</span></a></li>
   </ul>    
 </div>
