--- a/app/views/shared/_header_short.html.erb
+++ b/app/views/shared/_header_short.html.erb
@@ -6,10 +6,11 @@
         <h1><a href="/"><img src="<%=asset_path 'visual_01.jpg' %>" alt="ohigottabuythis" /></a></h1>
        </div>
        <ul class="clearfix">
-        <li><a href="/categories/">CATEGORY<span>,</span></a></li>
+        <li><a href="/deals/quick_search">BARGAIN <!-- <em>of Amazon</em> --></a></li>
+        <li><a href="/gadgets">GADGETS<span>,</span></a></li>
         <li><a href="/recommends/">FEATURED<span>,</span></a></li>
         <!-- <li><a href="/deals/bestdeals">DEALS <em>of Amazon</em></a></li> -->
-        <li><a href="/deals/quick_search">BARGAIN <!-- <em>of Amazon</em> --></a></li>
+        
        </ul>      
      </div>
     <!-- </div> -->
@@ -31,10 +32,11 @@
       <ul class="clearfix">
         <p>MENU</p>
         <li><a href="/">HOME<span>,</span></a></li> 
-        <li><a href="/categories/">CATEGORY<span>,</span></a></li>
+        <li><a href="/deals/quick_search">BARGAIN <!-- <em>of Amazon</em> --></a></li>
+        <li><a href="/gadgets/">GADGETS<span>,</span></a></li>
         <li><a href="/recommends/">FEATURED<span>,</span></a></li>
         <!-- <li><a href="/deals/bestdeals">DEALS <em>of Amazon</em></a></li> -->
-        <li><a href="/deals/quick_search">BARGAIN <!-- <em>of Amazon</em> --></a></li>
+        
       </ul>
       <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="모바일 메뉴 닫기" /></button>
       
