--- a/app/views/shared/_new_header.html.erb
+++ b/app/views/shared/_new_header.html.erb
@@ -12,19 +12,22 @@
           <ul id="primary-menu" class="main-menu navbar-nav">
             <li id="menu-item-1811" class="menu-item current-menu-item"><a href="/">Home</a></li>
             <li id="menu-item-1770" class="menu-item menu-item-has-children">
-              <a href="#" aria-haspopup="true" aria-expanded="false">About Us</a>
+              <a href="#" aria-haspopup="true" aria-expanded="false">All About Amazon</a>
               <ul class="sub-menu">
-                <li id="menu-item-1799" class="menu-item"><a href="#">Studio</a></li>
-                <li id="menu-item-1800" class="menu-item"><a href="#">Team</a></li>
-                <li id="menu-item-1771" class="menu-item"><a href="#">Services</a></li>
+                <li id="menu-item-1799" class="menu-item"><a href="#">Amazon Deals Finder</a></li>
+                <li id="menu-item-1800" class="menu-item"><a href="#">Today's Deals</a></li>
+                <li id="menu-item-1771" class="menu-item"><a href="#">Today's Promo Codes</a></li>
               </ul>
+              <li id="menu-item-1811" class="menu-item current-menu-item"><a href="/">Stores</a></li>
             </li>
 
             <li id="menu-item-1774" class="menu-item menu-item-has-children">
-              <a href="#" aria-haspopup="true" aria-expanded="false">Level 1</a>
+              <a href="#" aria-haspopup="true" aria-expanded="false">Featured</a>
               <ul class="sub-menu">
                 <li id="menu-item-1775" class="menu-item menu-item-has-children">
-                  <a href="#" aria-haspopup="true" aria-expanded="false">Level 2</a>
+                  <li id="menu-item-1803" class="menu-item"><a href="#">Gadgets</a></li>
+                  <li id="menu-item-1804" class="menu-item"><a href="#">Editor's Pick</a></li>
+                  <!-- <a href="#" aria-haspopup="true" aria-expanded="false">Level 2</a>
                   <ul class="sub-menu">
                     <li id="menu-item-1776" class="menu-item menu-item-has-children">
                       <a href="#">Level 3</a>
@@ -38,10 +41,10 @@
                     </li>
                     <li id="menu-item-1801" class="menu-item"><a href="#">Level 3a</a></li>
                     <li id="menu-item-1802" class="menu-item"><a href="#">Level 3b</a></li>
-                  </ul>
+                  </ul> -->
                 </li>
-                <li id="menu-item-1803" class="menu-item"><a href="#">Level 2a</a></li>
-                <li id="menu-item-1804" class="menu-item"><a href="#">Level 2b</a></li>
+                <!-- <li id="menu-item-1803" class="menu-item"><a href="#">Level 2a</a></li>
+                <li id="menu-item-1804" class="menu-item"><a href="#">Level 2b</a></li> -->
               </ul>
             </li>
             <!-- <li id="menu-item-1777" class="menu-item"><a href="#">Our Work</a></li>
