--- a/app/views/deals/quick_search.html.erb
+++ b/app/views/deals/quick_search.html.erb
@@ -3,7 +3,7 @@
   <div class="wrap"> 
   <%= render 'shared/header_short' %>
   <%= render 'shared/header_amazon' %>
-  <%= render 'deals/header' %> 
+  <%= render 'deals/header_index' %> 
 
     <div class="quicksearch common_layout codes">
 
