--- a/app/views/deals/_header_index.html.erb
+++ b/app/views/deals/_header_index.html.erb
@@ -3,7 +3,7 @@
   <button class="gnb_open_b"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button>
     <div class="sub_nav_pc">
       <ul class="clearfix">
-        <li class="coumos1"><a href="/deals/quick_search">Amazon Deal Finder</a></li>
+        <li class="coumos1"><a class="active" href="/deals/quick_search">Amazon Deal Finder</a></li>
         <!-- <li><a href="/hotdeals">More Deals & Coupons</a></li> -->
         <li><a href="/deals/bestdeals">Today's Deals</a></li>
         <!-- <li class="more"><a href="/hotdeals">[ More Deals ]</a></li> -->
