--- a/app/views/deals/_set_search.html.erb
+++ b/app/views/deals/_set_search.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 <div class="set_search_box">
-  <h2>Amazon Deal Finder</h2>
+  <h2>Amazon Deal Finder 3.0</h2>
 
   <button class="accordion">Select Category</button>
   <%= render 'deals/set_category' %>
