--- a/app/assets/stylesheets/gadgets.css
+++ b/app/assets/stylesheets/gadgets.css
@@ -72,9 +72,9 @@
 .on_gadgets .card_wrap .card-body .btn>a{float:left;text-decoration:none;color:#000;font-size:20px;border:1px solid #000;padding:3px 20px;line-height:20px;}
 .on_gadgets .card_wrap .card-body .btn>.learnmore{background:#000;color:#fff;}
 .on_gadgets .card_wrap .card-body .card_btn a{text-decoration:none;color:#000;}
-.on_gadgets .card_wrap .card-header .home_img{width:350px;height:350px}
-.on_gadgets .card_wrap .card-header img{display:block;width:100%;height:100%;border-radius:10px;object-fit:contain;}
-.on_gadgets .card_wrap .card-header img.cover{object-fit:cover;}
+.on_gadgets .card_wrap .card-header .home_img{width:350px;height:350px;position:relative;}
+.on_gadgets .card_wrap .card-header img{display:block;width:80%;height:80%;border-radius:10px;object-fit:contain;position:absolute;top:50%;left:50%;transform: translate(-50%, -50%);}
+.on_gadgets .card_wrap .card-header img.cover{width:100%;height:100%;object-fit:cover;}
 .on_gadgets .card_wrap .with-photo
 .on_gadgets .card_wrap .card-header{height:208px;padding:0;overflow:hidden;}
 .on_gadgets .card_wrap .start{position:absolute;top:-45px;right:15px;}
@@ -162,7 +162,7 @@
 .show_wrap .show_box_down h2{margin:0 0 1% 1%;border-bottom:1px solid #616161;width:200px;}
 .show_wrap .show_box_down .sbd_box{float:left;width:23%;margin:0 1%;}
 .show_wrap .show_box_down .sbd_box .down_img{width:100%;height:200px;}
-.show_wrap .show_box_down .sbd_box .down_img img{width:100%;height:100%;object-fit:cover;border-radius:20px;}
+.show_wrap .show_box_down .sbd_box .down_img img{width:100%;height:100%;object-fit:contain;border-radius:20px;border:3px solid #000;padding:10px;}
 .show_wrap .show_box_down .sbd_box .down_inner{padding:5px;}
 .show_wrap .show_box_down .sbd_box .down_inner p{}
 .show_wrap .show_box_down .sbd_box .down_inner p a{text-decoration:none;color:#616161;}
