--- a/app/views/deals/_header.html.erb
+++ b/app/views/deals/_header.html.erb
@@ -7,12 +7,14 @@
         <!-- <li><a href="/hotdeals">More Deals & Coupons</a></li> -->
         <li><a href="/deals/bestdeals">Today's Deals</a></li>
         <!-- <li class="more"><a href="/hotdeals">[ More Deals ]</a></li> -->
-        <li><a href="/deals/promo_codes">Today's Coupon Codes</a></li>
+        <li><a href="/deals/promo_codes">Coupon Codes</a></li>
+        <li class="todays_deal"><a target="_blank" href="/deals/promo_codes">Deal of the Day</a></li>
+        <li class="todays_deal"><a target="_blank" href="https://amzn.to/2IsIyRw">Lightning Deals</a></li>
         <!-- <li class="more"><a href="/promocodes">[ More Codes ]</a></li> -->
         <!-- <li><a href="/deals/most_reviewed">Most-Reviewed</a></li> -->
         <!-- <li><a href="/deals/picked_deals">Best Deals</a></li> -->
         <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
-        <li class="coumos" ><a href="/deals/promotions">Sales Offer & Promotions</a></li>
+        <!-- <li class="coumos" ><a href="/deals/promotions">Sales Offer & Promotions</a></li> -->
         
       </ul>
     </div>
@@ -26,12 +28,14 @@
         <!-- <li><a href="/hotdeals">MORE DEALS & COUPONS</a></li> -->
         <li><a href="/deals/bestdeals">TODAY'S DEALS,</a></li>
         <!-- <li><a href="/hotdeals"> - MORE DEALS,</a></li> -->
-        <li><a href="/deals/promo_codes">TODAY'S COUPON CODES,</a></li>
+        <li><a href="/deals/promo_codes">COUPON CODES,</a></li>
+        <li><a target="_blank" href="/deals/promo_codes">DEAL OF THE DAY</a></li>
+        <li><a target="_blank" href="https://amzn.to/2IsIyRw">LIGHTNING DEALS</a></li>
         <!-- <li><a href="/promocodes"> - MORE CODES,</a></li> -->
         <!-- <li><a href="/deals/most_reviewed">MOST-REVIEWED,</a></li> -->
         <!-- <li><a href="/deals/coupons">SALES & COUPONS,</a></li> -->
         <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
-        <li><a href="/deals/promotions">SALES OFFER & PROMOTIONS,</a></li>
+        <!-- <li><a href="/deals/promotions">SALES OFFER & PROMOTIONS,</a></li> -->
         <li class="top_menu"><a href="/deals/stores">BARGAIN BY STORE</a></li>
         <li><a href="/storepromotions">DEALS & PROMOTIONS,</a></li>
         <li><a href="/storedeals">THE BEST DEALS</a></li>
