--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -287,6 +287,7 @@ header .gnb_m,header .gnb_open2{display:none;}
 .sub_nav .shoes_nav_pc>ul>li{width:auto;margin:0 2%;}
 .sub_nav .sub_nav_pc>ul>li>a{text-decoration:none;color:#000;font-size:20px;display:block;font-weight:400;}
 .sub_nav .sub_nav_pc>ul>li>a.active{color:#000;font-weight:bold;border-bottom:2px solid #000;display:inline;background:#ffff00;padding:2px 10px;}
+.sub_nav .sub_nav_pc>ul>li.todays_deal>a.active{background:#fff;border:none;}
 .sub_nav .sub_nav_pc>ul>li.new_code>a{background:#87c442;color:#fff;padding:2px 10px;}
 .sub_nav .sub_nav_pc>ul>li.new_deal>a{background:#08f;color:#fff;padding:2px 10px;}
 .sub_nav .gnb_open,
