--- a/app/views/promocodes/hashtags.html.erb
+++ b/app/views/promocodes/hashtags.html.erb
@@ -6,7 +6,7 @@
     <%= render 'shared/header_short' %>
     <%= render 'shared/header_amazon' %>  
     <%= render 'shared/hotpro_header' %>
-    <div class="dealpage_title">
+    <div class="dealpage_title hashtag_page">
       <% if params[:name].present? %>
         <p>#<%= params[:name] %></p>
       <% end %>
