--- a/app/views/deals/_header_store.html.erb
+++ b/app/views/deals/_header_store.html.erb
@@ -16,16 +16,22 @@
     <div class="gnb_m">
       <ul class="clearfix">
         <p>MENU</p>
-        <li class="top_menu"><a href="/deals/bestdeals">Amazon's Bargain</a></li>
-        <li><a href="/hotdeals">MORE DEALS & COUPONS</a></li>
+        <li class="top_menu"><a href="/deals/quick_search">AMAZON's BARGAIN</a></li>
+        <li><a href="/deals/quick_search">AMAZON DEAL FINDER,</a></li>
+        <!-- <li><a href="/hotdeals">MORE DEALS & COUPONS</a></li> -->
         <li><a href="/deals/bestdeals">TODAY'S DEALS,</a></li>
-        <li><a href="/deals/promo_codes">TODAY'S COUPON CODES,</a></li>
-        <li><a href="/deals/quick_search">REAL TIME HOT DEAL FINDER,</a></li>
-        <li><a href="/deals/most_reviewed">MOST-REVIEWED,</a></li>
-        <li><a href="/deals/promotions">SALES OFFER & PROMOTIONS,</a></li>
-        <li class="top_menu"><a href="/deals/stores">Bargain By Store</a></li>
-        <li><a href="/storepromotions">SALES & PROMOTIONS,</a></li>
-        <!-- <li><a href="/storedeals">THE BEST DEALS</a></li> -->
+        <!-- <li><a href="/hotdeals"> - MORE DEALS,</a></li> -->
+        <li><a href="/deals/promo_codes">COUPON CODES,</a></li>
+        <li><a target="_blank" href="/deals/promo_codes">DEAL OF THE DAY</a></li>
+        <li><a target="_blank" href="https://amzn.to/2IsIyRw">LIGHTNING DEALS</a></li>
+        <!-- <li><a href="/promocodes"> - MORE CODES,</a></li> -->
+        <!-- <li><a href="/deals/most_reviewed">MOST-REVIEWED,</a></li> -->
+        <!-- <li><a href="/deals/coupons">SALES & COUPONS,</a></li> -->
+        <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
+        <!-- <li><a href="/deals/promotions">SALES OFFER & PROMOTIONS,</a></li> -->
+        <li class="top_menu"><a href="/deals/stores">BARGAIN BY STORE</a></li>
+        <li><a href="/storepromotions">DEALS & PROMOTIONS,</a></li>
+        <li><a href="/storedeals">THE BEST DEALS</a></li>
       </ul>
       <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="close menu" /></button>
     </div>
