--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -26,6 +26,7 @@
               <div class="mark"><span>BEST</span><em>DEALS</em></div>
             <% end %>
           <% end %>
+          <div class="show_tag"><h3><%= render_with_hashtags(@promocode.p_hashtag.to_s) %></h3></div>
            <% if can? :update, @promocode %>
             <div class="admin">
               <p>Admin Management</p>
