--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -117,9 +117,10 @@
 .show_wrap .show_box .show_img .mark span{text-align:center;color:#fff;display:block;font-size:11px;}
 .show_wrap .show_box .show_img .mark em{display:block;text-align:center;font-size:10px;color:#fff;}
 .show_wrap .show_box .show_img .show_tag{margin-top:15px;}
-.show_wrap .show_box .show_img .show_tag h3 a{background:#000;color:#fff;padding:5px 10px;border-radius:15px;}
+.show_wrap .show_box .show_img .show_tag h3 a{background:#000;color:#fff;padding:5px 10px;border-radius:15px;font-size:13px;}
+.show_wrap .show_box .show_img .admin{margin-top:30px;padding:10px;border:1px solid;}
 .show_wrap .show_box .show_img .admin a{background:none;color:#fff;background:#000;padding:1px 5px;}
-.show_wrap .show_box .show_img .admin .sharing{font-size:10px;}
+.show_wrap .show_box .show_img .admin .sharing{font-size:10px;margin-top:10px;}
 .hotdeal_related{width:1000px;margin:30px auto 0 auto;font-family: 'Montserrat', sans-serif;}
 .hotdeal_related p{text-align:center;font-size:30px;margin-bottom:20px;}
 
