--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -117,7 +117,7 @@
 .show_wrap .show_box .show_img .mark span{text-align:center;color:#fff;display:block;font-size:11px;}
 .show_wrap .show_box .show_img .mark em{display:block;text-align:center;font-size:10px;color:#fff;}
 .show_wrap .show_box .show_img .show_tag{margin-top:15px;}
-.show_wrap .show_box .show_img .show_tag h3 a{background:#000;color:#fff;padding:5px 10px;border-radius:15px;font-size:13px;}
+.show_wrap .show_box .show_img .show_tag h3 a{background:#000;color:#fff;padding:5px 10px;border-radius:15px;font-size:13px;line-height:2.4;}
 .show_wrap .show_box .show_img .admin{margin-top:30px;padding:10px;border:1px solid;}
 .show_wrap .show_box .show_img .admin a{background:none;color:#fff;background:#000;padding:1px 5px;}
 .show_wrap .show_box .show_img .admin .sharing{font-size:10px;margin-top:10px;}
