--- a/app/views/hotdeals/edit.html.erb
+++ b/app/views/hotdeals/edit.html.erb
@@ -9,7 +9,7 @@
 
         <%= f.input :himage, label: 'Choose Image' %>
         <!-- <%= f.select :h_spare_03, ([["Do You Have A Banner?", ""], "YES"])%> -->
-        <!-- <%= f.select :h_spare_07, ([["In Stock", ""], "few stock left"])%> -->
+        <%= f.select :h_spare_07, options_for_select([["In Stock", ""], "Only in a few stocks left"])%>
         <!-- <%= f.select :h_spare_10, ([["Subscribe & Save?", ""], "Yes"])%> -->
         <!-- <%= f.select :h_spare_12, ([["No Tax?", ""], "Yes"])%> -->
         <!-- <%= f.select :h_spare_13, ([["Write Blog?", ""], "Yes"])%> -->
