--- a/app/views/promocodes/_usa_kor.html.erb
+++ b/app/views/promocodes/_usa_kor.html.erb
@@ -480,7 +480,7 @@
   <div class="code_btn">
    <!-- <p class="code_line">Click and copy this code then apply it at your checkout</p> -->
    <div class="text_copied intheshow">
-    <div class="container"><div class="wrap"><div class="box"><p data-copy-text=""><%= @promocode.p_promocode %></p></div></div></div>
+    <div class="container_copy"><div class="wrap"><div class="box"><p data-copy-text=""><%= @promocode.p_promocode %></p></div></div></div>
   </div>
 
    <div class="only_show promocode_btn">
