--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -269,11 +269,11 @@
 .intheshow_store{width:400px;margin-top:10px;}
 .text_copied_pc{}
 .text_copied_m{display:none;}
-.text_copied .container{display:flex;justify-content:center;align-items:center;width:100%;height:100%;}
-.text_copied .container .wrap{flex:0 1 37.5rem;margin:5px 0;}
-.text_copied .container .wrap .box{padding:10px;background-color:#fff;border:0.0625rem solid #607d8b;border-radius:0.1875rem;}
-.text_copied .container .wrap .box:not(:last-child){margin-bottom:1.5625rem;}
-.text_copied .container .wrap .box p{margin:0;font-size:15px;text-transform:uppercase;}
+.text_copied .container_copy{display:flex;justify-content:center;align-items:center;width:100%;height:100%;}
+.text_copied .container_copy .wrap{flex:0 1 37.5rem;margin:5px 0;}
+.text_copied .container_copy .wrap .box{padding:10px;background-color:#fff;border:0.0625rem solid #607d8b;border-radius:0.1875rem;}
+.text_copied .container_copy .wrap .box:not(:last-child){margin-bottom:1.5625rem;}
+.text_copied .container_copy .wrap .box p{margin:0;font-size:15px;text-transform:uppercase;}
 [data-copy-text] + i.material-icons{transition:all 0.25s ease-in-out;position:absolute;top:0;right:0;padding:10px;color:#000;opacity:0.5;cursor:pointer;z-index:1;font-family:'Righteous', cursive;font-style:normal;}
 [data-copy-text] + i.material-icons:hover,
 [data-copy-text] + i.material-icons.active{background-color:#000;opacity:1;color:#fff;}
