--- a/app/views/deals/_header_store.html.erb
+++ b/app/views/deals/_header_store.html.erb
@@ -16,7 +16,7 @@
     <div class="gnb_m">
       <ul class="clearfix">
         <p>MENU</p>
-        <li class="top_menu"><a href="/deals/quick_search">AMAZON's BARGAIN</a></li>
+        <li class="top_menu"><a href="/deals/quick_search">ALL ABOUT AMAZON</a></li>
         <li><a href="/deals/quick_search">AMAZON DEAL FINDER,</a></li>
         <!-- <li><a href="/hotdeals">MORE DEALS & COUPONS</a></li> -->
         <li><a href="/deals/bestdeals">TODAY'S DEALS,</a></li>
@@ -29,9 +29,9 @@
         <!-- <li><a href="/deals/coupons">SALES & COUPONS,</a></li> -->
         <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
         <!-- <li><a href="/deals/promotions">SALES OFFER & PROMOTIONS,</a></li> -->
-        <li class="top_menu"><a href="/deals/stores">BARGAIN BY STORE</a></li>
+        <li class="top_menu"><a href="/deals/stores">FEATURED DISCOUNTS</a></li>
         <li><a href="/storepromotions">DEALS & PROMOTIONS,</a></li>
-        <li><a href="/storedeals">THE BEST DEALS</a></li>
+        <!-- <li><a href="/storedeals">THE BEST DEALS</a></li> -->
       </ul>
       <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="close menu" /></button>
     </div>
