--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -358,6 +358,7 @@ header .gnb_m,header .gnb_open2{display:none;}
   .sub_nav .gnb_open_b.on{display:block;right:5px;top:5px;}
   .sub_nav .gnb_open_b img{width:40px;height:40px;}
   .sub_nav .gnb_kbg{display:none;position:fixed;left:0;top:0;width:100%;height:100%;background:rgba(0,0,0,0.5);z-index:301;}
+  .deals_main_menu ul li{float:none;margin:0;text-align:center;}
   .deals_main_menu ul li a{font-size:35.9px;}
 }
 
@@ -630,7 +631,7 @@ header .gnb_m,header .gnb_open2{display:none;}
 
 /* Advance amazon search */
 .set_search{font-family:'Montserrat', sans-serif;}
-.set_banner{float:left;width:33%;margin-right:2%;border:1px solid #aaa;border-radius:10px;box-shadow:0 2px 10px rgba(0, 0, 0, 0.1);padding:17px 20px;height:683.44px;overflow:scroll;}
+.set_banner{float:left;width:33%;margin-right:2%;border:1px solid #aaa;border-radius:10px;box-shadow:0 2px 10px rgba(0, 0, 0, 0.1);padding:17px 20px;height:709.44px;overflow:scroll;}
 .set_banner h2{font-size:20px;}
 .set_banner ul{margin-left:15px;}
 .set_banner ul li{margin:10px 0;list-style:disc;}
