--- a/app/assets/stylesheets/store.css
+++ b/app/assets/stylesheets/store.css
@@ -163,7 +163,7 @@
   .sp_wrap .sp_right .sp_card{float:none;width:100%;margin:1%;box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);padding: 5px 10px 10px 10px;height:152px;}
   .sp_wrap .sp_right .sp_image{float:left;width:35%;margin-top:15px;height:140px;}
   .sp_wrap .sp_right .sp_image img{height:100%;object-fit:contain;z-index:-1;padding:10px;}
-  .sp_wrap .sp_right .date_comm em.expired{position:absolute;top:0;left:0;}
+  /*.sp_wrap .sp_right .date_comm em.expired{position:absolute;top:0;left:0;}*/
   .sp_wrap .sp_right .inner{float:left;width:60%;margin:10px 0 0 5%;}
   .sp_wrap .sp_right .inner .sp_title{font-size:13px;}
   .sp_wrap .sp_right .inner em{font-size:10px;}
@@ -174,6 +174,7 @@
   /*.sp_wrap .sp_right .inner em.expired{font-size:12px;padding:0 3px;}
   .sp_wrap .sp_right .inner em.endtoday{font-size:12px;padding:0 3px;}*/
   .sp_wrap .sp_right .inner span.index_title{font-size:12px;}
+  .sp_wrap .sp_right .inner span.index_title a{font-size:12px;}
   .sp_wrap .sp_right .inner .promocode_m{display:none;}
   .sp_wrap .sp_right .inner .sp_price{font-size:12px;margin-top:10px;}
   .sp_wrap .sp_right .sp_btn{display:none;}
@@ -183,8 +184,8 @@
   .show_wrap .like_more p{font-size:17px;}
   .show_wrap .like_more ul{margin-left:15px;}
   .show_wrap .like_more ul li a{font-size:13px}
-  .sp_wrap .sp_right .inner .date_pc{display:none;}
-  .sp_wrap .sp_right .sp_image .date_m{display:block;padding-top:5px;}
+  /*.sp_wrap .sp_right .inner .date_pc{display:none;}*/
+  /*.sp_wrap .sp_right .sp_image .date_m{display:block;padding-top:5px;}*/
 }
 @media screen and (min-width:641px) and (max-width:1199px){
   .sp_wrap{margin:0;}
